--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -7,9 +7,29 @@ env:
   node_version: 18
 
 jobs:
-  # Use a Common Setup workflow
   call_setup:
-    uses: ./.github/workflows/setup.yml
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install node
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ env.node_version }}
+
+      - name: Cache Node.js modules
+        uses: actions/cache@v2
+        with:
+          path: .npm
+          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-node-
+            ${{ runner.OS }}-
+
+      - name: Install dependencies
+        run: npm ci --cache .npm --prefer-offline
+
 
   lint:
     needs: call_setup
