--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -7,29 +7,10 @@ env:
   node_version: 18
 
 jobs:
-  call_setup:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Install node
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ env.node_version }}
-
-      - name: Cache Node.js modules
-        uses: actions/cache@v2
-        with:
-          path: .npm
-          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.OS }}-node-
-            ${{ runner.OS }}-
-
-      - name: Install dependencies
-        run: npm ci --cache .npm --prefer-offline
-
+  # Use a Common Setup workflow
+  setup_action:
+  steps:
+    - uses: ./.github/actions/setup
 
   lint:
     needs: call_setup
