--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -9,11 +9,12 @@ env:
 jobs:
   # Use a Common Setup workflow
   setup_action:
+    runs-on: ubuntu-latest
     steps:
       - uses: ./.github/actions/setup
 
   lint:
-    needs: call_setup
+    needs: setup_action
     runs-on: ubuntu-latest
     steps:
       - name: Lint
