--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -7,8 +7,14 @@ env:
   node_version: 18
 
 jobs:
+  checkout:
+    runs-on: ubuntu-latest
+    - name: Checkout code
+      uses: actions/checkout@v2
+
   # Use a Common Setup workflow
   setup_action:
+    needs: checkout
     runs-on: ubuntu-latest
     steps:
       - uses: ./.github/actions/setup
