--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -9,8 +9,9 @@ env:
 jobs:
   checkout:
     runs-on: ubuntu-latest
-    - name: Checkout code
-      uses: actions/checkout@v2
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
   # Use a Common Setup workflow
   setup_action:
