--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,8 +67,9 @@ on:
 jobs:
   checkout:
     runs-on: ubuntu-latest
-    - name: Checkout code
-      uses: actions/checkout@v2
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
   # Use a Common Setup workflow
   setup_action:
